responsiveness fixed on smaller screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1027,33 +1027,7 @@ main {
     }
 }
 
-
-
 @media (max-width: 35rem) {
-    .first-word {
-        font-size: 12rem;
-        -webkit-text-stroke: 0.25rem var(--color-blue);
-        letter-spacing: 0.05em;
-    }
-
-    .second-word {
-        font-size: 7rem;
-        -webkit-text-stroke: 0.25rem var(--color-blue-light);
-        letter-spacing: 0.08em;
-    }
-
-    .about-image-stack {
-        margin-top: 2rem;
-        margin-bottom: -17rem;
-    }
-
-    .about-image-stack img {
-        width: 150px;
-        height: auto;
-    }
-}
-
-@media (max-width: 30rem) {
     .hero-top-title {
         font-size: 1.5rem;
         margin-top: 1.5rem;
@@ -1151,8 +1125,8 @@ main {
     }
 
     .about-image-stack {
-        margin-top: 2rem;
-        margin-bottom: -20rem;
+        margin-top: -2rem;
+        margin-bottom: -18rem;
     }
 
     .about-image-stack img {
@@ -1179,7 +1153,7 @@ main {
 
     .about-h2-upcoming {
         font-size: 2rem;
-        margin-bottom: 1.5rem
+        margin-bottom: -2rem
     }
 
     .about-h2 {
